# testing_grounds

./: README.md
Benchmark/python-opencv-vs-cpp-opencv-from-python/: CMakeLists.txt  README.md  setup.py
Benchmark/python-opencv-vs-cpp-opencv-from-python/bench/: bench.py
Benchmark/python-opencv-vs-cpp-opencv-from-python/include/python-opencv-vs-cpp-opencv-from-python/: python-opencv-vs-cpp-opencv-from-python.hpp
Benchmark/python-opencv-vs-cpp-opencv-from-python/python/: CMakeLists.txt  compile_commands.json  python-opencv-vs-cpp-opencv-from-python_python.cpp
Benchmark/python-opencv-vs-cpp-opencv-from-python/python/tests/: test_python_bindings.py
Benchmark/python-opencv-vs-cpp-opencv-from-python/src/: CMakeLists.txt  python-opencv-vs-cpp-opencv-from-python.cpp
C/print_error_code/: Makefile  print_error_code.c
CPP/: fib.cpp
CPP/concepts/: CMakeLists.txt  concepts.cpp
CPP/eigen/: CMakeLists.txt  test_eigen.cpp
CPP/eigen/.cache/clangd/index/: test_eigen.cpp.74F0EC9FF722AE17.idx
CPP/ranges/: ranges.cpp
Python/Algorithms/bfs_vis/: bfs.py
Python/Hardware/bluetooth/: recv.py  send.py
Python/Hardware/camera_view/: camera.py
Python/ImageProcessing/: trip_simulator.py
Python/ImageProcessing/focus/: focus.py
Python/ImageProcessing/number_extractor/: Untitled.ipynb  number_extractor.py  numbers2.py
Python/ImageProcessing/perspective_transform/: opencv_rectify.py
Python/ImageProcessing/simple_row_col_sum/: CMakeLists.txt  rc_sum.cpp  rc_sum.ipynb
Python/LanguageFeatures/: classes.py  pattern_match.py  read_glob.py
Python/LanguageFeatures/deleter/: dunder.py
Python/MachineLearning/: Untitled.ipynb  perzeptron.ipynb  train_inverse.ipynb
Python/MachineLearning/.ipynb_checkpoints/: train_inverse-checkpoint.ipynb
Python/MachineLearning/Autoencoder/: autoencoder.ipynb
Python/Notebooks/: .welch.py.swp  url_remove.ipynb
Python/Notebooks/Cipher/rot13/: rot13.ipynb
Python/Notebooks/ImageProcessing/2D Convolution/: convolution.ipynb
Python/Notebooks/ImageProcessing/2D_welch/: welch.py
Python/Notebooks/ImageProcessing/segment_coins/: segment_coins.ipynb
Python/Notebooks/ImageProcessing/thresholding/: threshold.ipynb
Python/Notebooks/SignalProcessing/.virtual_documents/demodulation/: Untitled.ipynb
Python/Notebooks/Theory/.ipynb_checkpoints/: solve_exp_equation-checkpoint.ipynb
Python/Notebooks/Theory/Algebra/: solve_exp_equation.ipynb  zernike_polynomials.ipynb
Python/Notebooks/Theory/Physics/: orbitals.ipynb  uncertainty_in_fit.ipynb
Python/Optics/: Fresnellsche Formeln.ipynb  hss_sim.ipynb  ifta.ipynb  meep_maxwell.ipynb  sellmeier.ipynb
Python/Optics/raytracing (ynu)/: main.py  raytracer.py
Python/Theory/: bitwise.py  symbolic_fourier_transform.ipynb
Python/Theory/compiled_python/: setup.py  test_module.c  test_module.py
Python/Utils/: counter.py
Python/Utils/ctypesgen/: CMakeLists.txt  add_lib.py  test_bindings.py
Rust/fibonacci/src/: main.rs
